[package]
name = "lcode"
version = "0.9.5"
description = "An application of terminal write leetcode.一个终端刷力扣的应用"
documentation = "https://docs.rs/lcode"
license = "Apache-2.0"
readme = "./README.md"
keywords = ["cli", "leetcode", "tui", "terminal", "algorithms"]
categories = ["algorithms", "command-line-utilities", "asynchronous"]
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

exclude = ["tests/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
cross = ["notify-rust/d_vendored"] # cross compile for dbus

[dependencies]
# async
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

miette = { workspace = true, features = ["fancy"] }
colored = { workspace = true }

# log
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

# nucleo = { workspace = true }
# nucleo-matcher = { workspace = true }
simsearch = { workspace = true }

inquire = { workspace = true }
atoi = { workspace = true }
unicode-width = { workspace = true }

clap_complete = { workspace = true }
clap = { workspace = true }

ratatui = { workspace = true }
crossterm = { workspace = true, features = ["event-stream"] }
tui-textarea = { workspace = true }

ratatui-image = { workspace = true }
image = { workspace = true }

# tui-term = { version = "0.1.2" }
# tui-logger = { version = "0.9.5" }

open = { workspace = true }

rayon = { workspace = true }

notify-rust = { workspace = true }

lcode-config = { workspace = true }
leetcode-api = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
