[package]
name = "leetcode-api"
version = "0.5.1"
description = "leetcode api"
license = "MIT"
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
keywords = ["leetcode", "api"]
categories = ["web-programming::http-client"]
readme = "./README.md"

exclude = ["tests/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["macros", "time"] }

sea-orm = { workspace = true }
tracing = { workspace = true }
miette = { workspace = true }
colored = { workspace = true }
unicode-width = { workspace = true }
paste = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

ratatui = { workspace = true, optional = true }
regex = { workspace = true }

# render
html2text = { workspace = true }
scraper = { workspace = true }
tabled = { workspace = true }

lcode-config = { workspace = true }
decrypt-cookies = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }
pretty_assertions = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[features]
default = ["ratatui"]
ratatui = ["dep:ratatui"] # enable `Render` trait's `to_tui_vec` method
